set up gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://19101990.github.io/mini-mate",
+  "homepage": "https://19101990.github.io/mini-mate/",
   "name": "mini-mate",
   "version": "0.1.0",
   "private": true,
