--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^11.2.10",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-images": "^1.2.0-beta.7",
@@ -24,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" 
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
